# ontoxref-tool

./: .gitignore  Makefile  README.md
pypi/: LICENSE  README.md  setup.cfg
pypi/src/ontoxref/: backend.py  service.py
queries/: get_xrefs.sparql
