[metadata]
name = ontoxref
version = 1.0.0
author = Josef Hardi
author_email = josef.hardi@gmail.com
description = Find mappings (or cross-references) between terms from ontologies and coding standards
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/protegeteam/ontoxref-tool
project_urls =
    Bug Tracker = https://github.com/protegeteam/ontoxref-tool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    lmdbm==0.0.5
python_requires = >=3.6

[options.packages.find]
where = src